# cs262

./: .gitignore  README.md
design_exercise_1/: README.md  client copy.py  client.py  env.sh  notebook.md  protocol.py  server copy.py  server.py  test.py  utils.py
design_exercise_1/client_web/: chatroom.py  forms.py
design_exercise_1/grpc/: chat_app.proto  chat_app_pb2.py  chat_app_pb2.pyi  chat_app_pb2_grpc.py  client.py  measurements.py  server.py  test.py
design_exercise_1/socket/: client.py  env.sh  measurements.py  protocol.py  server.py  test.py  utils.py
design_exercise_2/: CS262 - Design 2 - Presentation.pptx  plotter-Copy1.ipynb  plotter.ipynb  scale_model.py  unit_test.py
design_exercise_2/experiment_rates_0.10-0.10-1.00_rand_9/: P1.csv  P2.csv  P3.csv  experiment.csv
design_exercise_2/experiment_rates_0.10-1.00-1.00_rand_9/: P1.csv  P2.csv  P3.csv  experiment.csv
design_exercise_2_submission/: plotter.ipynb  pyproject.toml
design_exercise_3/: .gitignore  README.md  chat_app.proto  chat_app_pb2.py  chat_app_pb2.pyi  chat_app_pb2_grpc.py  client.py  config.py  db_server_1.db  env.sh  fault_tolerance_test.py  requirements.txt  server.py  test.py
final_project/: README.md  ascii_art.py  chat_gpt.py  clean.sh  client.py  node.py  pyproject.toml  questions.csv  questions.db  quiplash.proto  quiplash_pb2.py  quiplash_pb2.pyi  quiplash_pb2_grpc.py  requirements.txt  run.sh  setup.sh  tkinker_app.py  unit_test.py  utils.py
final_project/chat_gpt/: questions.csv  questions_additional.csv
final_project/tkinter/: tkinker_app.py
(+132 files in other folders)
