[tool.poetry]
name = "final_project"
version = "0.1.0"
description = ""
authors = ["AdolfoRoquero"]

[tool.poetry.dependencies]
python = "^3.9"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"
pickleDB = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
