[tool.poetry]
name = "final-project"
version = "0.1.0"
description = ""
authors = ["AdolfoRoquero"]
readme = "README.md"
packages = [{include = "final_project"}]

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.54.0"
grpcio-tools = "^1.54.0"
pickledb = "^0.9.2"
numpy = "^1.24.3"
inputimeout = "^1.0.4"
pillow = "^9.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
